--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <section>
         <article>
             <h3>health secretary에 관하여</h3>
-            <img src = "./images/me.JPG" width="300" height="400">
+            <img src = "./images/me.jpg" width="300" height="400">
             <h3> 대외활동</h3>
             <table border="1" width="50%">
                 <tr>
@@ -44,9 +44,9 @@
         </article>
         <article>
             <h3> 멀티미디어</h3>
-            <audio src="./media/wheesung.MP3" controls></audio>
+            <audio src="./media/wheesung.mp3" controls></audio>
             자연을 살리자 <br>
-            <video src="./media/movie.MP4" controls></video>
+            <video src="./media/movie.mp4" controls></video>
         </article>
     </section>
     <aside>
